--- a/data/nichtlinear/processed/kapitel2_annotated.tex
+++ b/data/nichtlinear/processed/kapitel2_annotated.tex
@@ -459,4 +459,20 @@ Für verschiedene \setref{Punkte}{label:vector} $p,q\in\mathcal{M}$ erhält man 
 \end{remark}
 
 
+\snippet{64}
+
+Die Ableitung einer \setref{differenzierbaren vektoriellen
+Funktion}{label:differentiable vector-valued function} $F:\mathcal{M}\to{\mathbb{R}}^{m}$ ist die $m\times n$-Matrix
+
+\begin{equation}
+F^{\prime}(x)={\mathrm{d}} F(x)=\frac{\partial F}{\partial x}(x):=\left(\begin{array}{ccc}
+\frac{\partial F_{1}}{\partial x_{1}}(x) & \cdots & \frac{\partial F_{1}}{\partial x_{n}}(x)\\
+\vdots & \ddots & \vdots\\
+\frac{\partial F_{m}}{\partial x_{1}}(x) & \cdots & \frac{\partial F_{m}}{\partial x_{n}}(x)
+\end{array}\right),\label{eq:dF}
+\end{equation}
+{label:Jacobian matrix}} bzw. \textbf{\em Differential}
+genannt wird. Die \setref{Jacobimatrix}{label:Jacobian matrix} eines \setref{Vektorfeldes}{label:vector field} $f:\mathcal{M}\to{\mathbb{R}}^{n}$
+ist eine \setref{quadratische}{label:square matrix} $n\times n$-\setref{Matrix}{label:matrix}.
+
 \end{document}
